--- a/site/src/app.html
+++ b/site/src/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body>
+  <body class="bg-white dark:bg-black dark:text-slate-100">
     %sveltekit.body%
   </body>
 </html>
